--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
   </section>
-
+<center>
 <div id="flashContent">
 			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1280" height="720" id="croquis" align="middle">
 				<param name="movie" value="croquis.swf" />
@@ -97,7 +97,7 @@
 				<!--<![endif]-->
 			</object>
 		</div>
-
+</center>
   <!-- Content section -->
   <section class="py-5">
     <div class="container">
