--- a/index.html
+++ b/index.html
@@ -106,6 +106,31 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
   </section>
+	
+	<section id="contact">
+  <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">¡Contactanos con un Click!</h2>
+            <hr class="my-4">
+            <p class="mb-5">¿Listo para empezar un proyecto conosotros?</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+            <p>(503) 7683 9999</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
