--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
   </section>
 	
-	<section id="contact">
+	<section id="py-5">
   <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
