--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
   </section>
-	
-	<section id="py-5">
-  <div class="container">
+
+ 
+	  <section class="py-5">
+	<div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">¡Contactanos con un Click!</h2>
