--- a/index.html
+++ b/index.html
@@ -103,7 +103,15 @@
     <div class="container">
       <h1>Contactos</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-	     <div class="row">
+<div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">¡Contactanos con un Click!</h2>
+            <hr class="my-4">
+            <p class="mb-5">¿Listo para empezar un proyecto conosotros?</p>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
             <p>(503) 7683 9999</p>
@@ -116,6 +124,7 @@
           </div>
         </div>
       </div>
+>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
