--- a/index.html
+++ b/index.html
@@ -107,22 +107,39 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">¡Contactanos con un Click!</h2>
             <hr class="my-4">
-            <p class="mb-5">¿Listo para empezar un proyecto conosotros?</p>
+            <p class="mb-5">Contacta a tu vendedor designado</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+          <div class="col-lg-4 ml-auto text-center"
             <p>(503) 7683 9999</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
             </p>
           </div>
       </div>
-
+	 <div class="row">
+          <div class="col-lg-4 ml-auto text-center"
+            <p>(503) 7683 9999</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <p>
+              <a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
+            </p>
+          </div>
+      </div>
+ <div class="row">
+          <div class="col-lg-4 ml-auto text-center"
+            <p>(503) 7683 9999</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <p>
+              <a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
+            </p>
+          </div>
+      </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
   </section>
