--- a/index.html
+++ b/index.html
@@ -101,45 +101,20 @@
   <!-- Content section -->
   <section class="py-5">
     <div class="container">
-      <h1>Contactos</h1>
+      <h1>Section Heading</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">¡Contactanos con un Click!</h2>
-            <hr class="my-4">
-            <p class="mb-5">Contacta a tu vendedor designado</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center"
-            <p>(503) 7683 9999</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <p>
-              <a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
+	    <p>
+              <a href="mailto:javoo502@gmail.com.com">correo@asi.com.sv</a>
             </p>
-          </div>
-      </div>
-	 <div class="row">
-          <div class="col-lg-4 ml-auto text-center"
-            <p>(503) 7683 9999</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <p>
-              <a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
+
+	    <p>
+              <a href="mailto:javoo502@gmail.com.com">correo@asi.com.sv</a>
             </p>
-          </div>
-      </div>
- <div class="row">
-          <div class="col-lg-4 ml-auto text-center"
-            <p>(503) 7683 9999</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <p>
-              <a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
+
+	    <p>
+              <a href="mailto:javoo502@gmail.com.com">correo@asi.com.sv</a>
             </p>
-          </div>
-      </div>
+
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
   </section>
