--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
       <h1>Section Heading</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-    </div>
+		<p>
+	<a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
+		</p>
+	  </div>
   </section>
 
 
