--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
 		<p>
-	<a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
+	<a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a><a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a><a href="mailto:javoo502@gmail.com.com">visceral@studio.com</a>
 		</p>
 	  </div>
   </section>
