--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       <h1>Section Heading</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-		<center><p>
-	<a href="mailto:vendedor@asi.com.sv">vendedor@asi.com.sv&nbsp;&nbsp;&nbsp;</a><a href="mailto:vendedor@asi.com.sv">vendedor@asi.com.sv&nbsp;&nbsp;&nbsp;</a><a href="mailto:vendedor@asi.com.sv">vendedor@asi.com.sv&nbsp;&nbsp;&nbsp;</a>
+		<center><p ALIGN="justify">
+	<a href="mailto:vendedor@asi.com.sv">vendedor@asi.com.sv</a><a href="mailto:vendedor@asi.com.sv">vendedor@asi.com.sv</a><a href="mailto:vendedor@asi.com.sv">vendedor@asi.com.sv</a>
 		</p></center>
 	  </div>
   </section>
