--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <h1>Section Heading</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-		<center><p ALIGN="justify">
+		<center><p>
 	<a href="mailto:vendedor@asi.com.sv">vendedor1</a><a href="mailto:vendedor@asi.com.sv">vendedor2</a><a href="mailto:vendedor@asi.com.sv">vendedor3</a>
 		</p></center>
 	  </div>
