--- a/index.html
+++ b/index.html
@@ -99,11 +99,17 @@
 		</div>
 </center>
   <!-- Content section -->
+	  <!-- Content section -->
   <section class="py-5">
     <div class="container">
       <h1>Section Heading</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+    </div>
+  </section>
+	
+  <section class="py-5">
+    <div class="container">
 		<center><p>
 	<a href="mailto:vendedor@asi.com.sv">vendedor1</a><a href="mailto:vendedor@asi.com.sv">vendedor2</a><a href="mailto:vendedor@asi.com.sv">vendedor3</a>
 		</p></center>
