--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </section>
 	
   <section class="py-5">
-    <div class="container">
+    <div class="container" class="row">
 		<center><p>
 	<a href="mailto:vendedor@asi.com.sv">vendedor1</a><a href="mailto:vendedor@asi.com.sv">vendedor2</a><a href="mailto:vendedor@asi.com.sv">vendedor3</a>
 		</p></center>
