--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
   <section class="py-5">
     <div class="container" class="row">
 		<center><p>
-	<a href="mailto:vendedor@asi.com.sv">vendedor1</a><a href="mailto:vendedor@asi.com.sv">vendedor2</a><a href="mailto:vendedor@asi.com.sv">vendedor3</a>
+	<a href="mailto:vendedor@asi.com.sv">vendedor</a>
+		</p></center>
+	    <center><p>
+	<a href="mailto:vendedor@asi.com.sv">vendedor</a>
+		</p></center>
+	    <center><p>
+	<a href="mailto:vendedor@asi.com.sv">vendedor</a>
 		</p></center>
 	  </div>
   </section>
