--- a/index.html
+++ b/index.html
@@ -109,15 +109,18 @@
   </section>
 	
   <section class="py-5">
-    <div class="container" class="row">
-		<center><p>
-	<a href="mailto:vendedor@asi.com.sv">vendedor</a>
-		</p></center>
+    <div class="container">
+	<center><p class="lead">Rodrigo Méndez Tel.:2267-9281</p></center>
 	    <center><p>
-	<a href="mailto:vendedor@asi.com.sv">vendedor</a>
+	<a href="mailto:rodrigo.mendez@asi.com.sv">rodrigo.mendez@asi.com.sv</a>
 		</p></center>
+	<center><p class="lead">César Lindo Tel:2267-9276</p></center>
 	    <center><p>
-	<a href="mailto:vendedor@asi.com.sv">vendedor</a>
+	<a href="mailto:cesar.lindo@asi.com.sv">cesar.lindo@asi.com.sv</a>
+		</p></center>
+	 <center><p class="lead">Karla de Montecinos Tel.:2267-9233</p></center>
+	    <center><p>
+	<a href="mailto:karla.demontecinos@asi.com.sv">karla.demontecinos@asi.com.sv</a>
 		</p></center>
 	  </div>
   </section>
