--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	    <center><p>
 	<a href="mailto:rodrigo.mendez@asi.com.sv">rodrigo.mendez@asi.com.sv</a>
 		</p></center>
-	<center><p class="lead">César Lindo Tel:2267-9276</p></center>
+	<center><p class="lead">César Lindo Tel.:2267-9276</p></center>
 	    <center><p>
 	<a href="mailto:cesar.lindo@asi.com.sv">cesar.lindo@asi.com.sv</a>
 		</p></center>
