--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
 
   <!-- Header - set the background image for the header in the line below -->
-  <header class="py-5 bg-image-full" style="background-image: url('https://github.com/javooexe/PREMIOSASI/blob/master/img/back.png');">
+  <header class="py-5 bg-image-full" style="background-image: url('https://unsplash.com/photos/pcZvxrAyYoQ');">
     <img class="img-fluid d-block mx-auto" src="img/premioslogo.png" alt="">
   </header>
 
