--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
 
   <!-- Header - set the background image for the header in the line below -->
-  <header class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1076');">
+  <header class="py-5 bg-image-full" style="background-image: url('https://picsum.photos/200/300?image=1042');">
     <img class="img-fluid d-block mx-auto" src="img/premioslogo.png" alt="">
   </header>
 
